--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,37 @@
 alembic==1.14.1
 annotated-types==0.7.0
 anyio==4.8.0
+boto3==1.37.0
+botocore==1.37.0
+certifi==2025.1.31
 click==8.1.8
 ecdsa==0.19.0
 exceptiongroup==1.2.2
 fastapi==0.115.8
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+jmespath==1.0.1
 Mako==1.3.9
 MarkupSafe==3.0.2
+pillow==11.1.0
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pydantic==2.10.6
 pydantic_core==2.27.2
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-jose==3.4.0
+python-magic==0.4.27
+python-multipart==0.0.20
 rsa==4.9
+s3transfer==0.11.2
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.45.3
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
